--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -120,7 +120,7 @@ main {
   flex-wrap: wrap;
   text-align: center;
   width: 50%;
-  border: 5px solid blue;
+  /* border: 5px solid blue; */
 }
 
 .quantity-container {
