--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -19,8 +19,13 @@
 }
 
 .logo {
-  padding: 1rem;
-  border-radius: 1rem;
+  padding: 0rem;
+  width: fit-content;
+
+  img {
+    width: 100px;
+    height: auto;
+  }
 }
 
 .nav-bar {
@@ -71,20 +76,31 @@ main {
     rgba(230, 157, 112, 1) 30%,
     rgba(255, 0, 20, 0.9990589985994398) 100%
   );
-  height: 150vh;
+  height: 175vh;
   display: flex;
   flex-direction: column;
   color: white;
   /* border: 5px solid red; */
 }
 
-/* Overall container for all product page content */
+/* Asked ChatGPT to help me with some CSS code that would allow the image to zoom in a bit when the user hovers over the image. I am applying this code to all images in the page to allow for more user interactivity. */
+img {
+  object-fit: cover;
+  transition: transform 0.3s ease-in-out;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+/* Overall container for all happy cola product content */
 .card-container {
   display: flex;
+  height: 46%;
   flex-wrap: nowrap;
-  justify-content: space-around;
+  justify-content: center;
   flex-direction: row;
-  padding: 15rem;
+  padding: 10rem;
   padding-top: 7rem;
   gap: 2rem;
   /* border: 5px solid purple; */
@@ -97,6 +113,12 @@ main {
   padding: 2rem;
   box-shadow: black 0px 0px 10px;
   /* border: 5px solid greenyellow; */
+  
+  img {
+    object-fit: contain;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 /* Product information, quantity, and options */
@@ -106,7 +128,7 @@ main {
   justify-content: flex-start;
   align-items: center;
   gap: 1rem;
-  width: 50%;
+  width: 40%;
   /* border: 5px solid black; */
 }
 
@@ -118,13 +140,25 @@ main {
   /* border: 5px solid hotpink; */
 }
 
+.description-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  /* padding-top: 1rem;
+  padding-bottom: 1rem; */
+  flex-wrap: wrap;
+  text-align: center;
+  width: 100%;
+  /* border: 5px solid blue; */
+}
+
 .price-card {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   width: 100%;
-  padding: 0rem 0rem 0rem .6rem;
 
   button {
     /* background-color: #81667a;
@@ -137,12 +171,19 @@ main {
     align-items: center;
     justify-content: center;
     margin: 1rem;
+    gap: .5rem;
     padding: .5rem;
     color: white;
     font-size: .88rem;
     font-weight: 400;
     cursor: pointer;
     box-shadow: black 0px 0px 2px;
+  }
+
+  button:hover {
+    .add-to-cart-icon i {
+      transform: scale(1.1);
+    }
   }
 }
 
@@ -155,19 +196,6 @@ main {
 .add-to-cart-icon i {
   color: white;
   font-size: 1.5rem;
-}
-
-.description-card {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  flex-wrap: wrap;
-  text-align: center;
-  width: 100%;
-  /* border: 5px solid blue; */
 }
 
 h1 {
@@ -194,10 +222,9 @@ h4 {
 .quantity-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
   width: 100%;
-  align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
   /* border: 5px solid green; */
 }
 
@@ -206,26 +233,103 @@ h4 {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  flex-wrap: wrap;
   gap: 1rem;
   /* border: 5px solid red; */
 }
 
-#pack-of-6 {
-  background-color: white;
-  border-radius: .5rem;
+#pack-of-3, #pack-of-6, #pack-of-24 {
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: .5rem;
   padding: 1rem;
+  cursor: pointer;
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: black 0px 0px 4px 0px;
+
+  img {
+    object-fit: contain;
+    width: auto;
+    height: 100px;
+  }
+
+  p {
+    font-size: .75rem;
+    font-weight: 500;
+    color: black;
+  }
 }
 
-#pack-of-24 {
+#pack-of-3:hover, #pack-of-6:hover, #pack-of-24:hover {
+  box-shadow: black 0px 0px 5px;
+  color: white;
+}
+
+/* Suggested Products Section */
+.related-products-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 2rem;
+  /* border: 5px solid yellow; */
+}
+
+.related-products-container {
+  display: flex;
   background-color: white;
-  border-radius: .5rem;
   padding: 1rem;
+  border-radius: 1rem;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  gap: 2rem;
+  flex-wrap: wrap;
+  /* border: 5px solid purple; */
+
+  img {
+    height: 210px;
+    width: auto;
+  }
+}
+
+.limited-edition-product {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+  gap: 2rem;
+  /* border: 5px solid yellow; */
+}
+
+.limited-edition-product-container {
+  display: flex;
+  background-color: white;
+  border-radius: 1rem;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  padding: 1rem;
+  margin: 0 auto;
+  width: fit-content;
+  /* border: 5px solid purple; */
+
+  img {
+    height: 210px;
+    width: auto;
+  }
 }
 
 /* Footer Section */
 .footer-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   padding: 1rem 2rem;
@@ -233,4 +337,14 @@ h4 {
   border-bottom: 1px solid #e9ecef;
   font-family: 'Carlito', sans-serif;
   /* border: 5px solid red; */
+}
+
+.footer-logo {
+  padding: 0rem;
+  width: fit-content;
+
+  img {
+    width: 100px;
+    height: auto;
+  }
 }
